@@ -137,7 +137,7 @@ the public part of gps.h. (Done in 2.96~dev.)</p></li>
 
 <li><p>gps_set_raw_hook() will be removed. Instead, clients will simply
 be able to look at the packet buffer directly. (Of course, this is
-only recommended when the PACKET_SET flag is up.)</p></li>
+only recommended when the PACKET_SET flag is up.) (Done in 2.96~dev.)</p></li>
 
 <li><p>gps_poll() will be renamed to gps_read(). (Done in 2.96~dev.)</p></li>
 
