@@ -7,7 +7,8 @@
   log file. A gpsd client can now set any locale it likes, and JSON
   will still be parsed using the C locale matching the daemon's.  Clients
   are no longer required to define a gpsd_report() hook. gpsd no longer
-  emits probe strings to unidentified USB devices at startup.
+  emits probe strings to unidentified USB devices at startup.  The client
+  API cleanup is finished; set_raw_hook is gone.
 
 * Tue Jul 13 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95
   The autonomous robot submarine total world domination release!
